[metadata]
name = dandelion
summary = OpenV2X Device Management APIServer
description_file =
author = 99cloud
author_email = 99cloud@99cloud.net
home_page = 
python_requires = >=3.8
classifier =
    Environment :: OpenV2X
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    dandelion
    dandelion/alembic

[entry_points]
oslo.config.opts =
    dandelion.conf = dandelion.conf.opts:list_opts
